--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-Starter: a light-weight open source C++ library
+Starter: a light-weight open source C++ library of data structures and algorithms
 
-2013.2.19
+
+Demo: http://www.caibowen.com/work.html#id_starter
+
