--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Starter: a light-weight open source C++ library of data structures and algorithms
 
 
-Demo: http://www.caibowen.com/work.html#id_starter
+Demo can be found [here](http://www.caibowen.com/work.html#id_starter)
 
